prevent the navigation wrapping

--- a/videomaker/assets/theme.css
+++ b/videomaker/assets/theme.css
@@ -131,6 +131,7 @@ div.post-meta a {
 }
 
 .wp-block-navigation.is-style-blockbase-navigation-improved-responsive.is-responsive .is-menu-open.wp-block-navigation__responsive-container .wp-block-navigation__responsive-container-content {
+	flex-wrap: nowrap;
 	justify-content: center;
 }
 
