--- a/videomaker/sass/_navigation.scss
+++ b/videomaker/sass/_navigation.scss
@@ -30,6 +30,7 @@
 			}
 		}
 		.wp-block-navigation__responsive-container-content {
+			flex-wrap: nowrap;
 			justify-content: center;
 		}
 		ul.wp-block-social-links {
